--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://Manas146.github.io/Portfolio",
+  "homepage":"https://Manas146.github.io/Portfolio",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
